# perft_gpu_2026

./: .gitignore  CLAUDE.md  CMakeLists.txt  GlobalVars.cpp  Magics.cpp  MoveGeneratorBitboard.h  README.md  chess.h  launcher.cu  launcher.h  perft.cu  perft_bb.h  perft_kernels.cu  switches.h  tt.h  uint128.h  util.cpp  utils.h  zobrist.cpp  zobrist.h
